# Digital-Dasein_aletheia

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  NERVOUS-SYSTEM.md  PHILOSOPHY.md  README.md  SCOPE.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark-change.yml  config.yml  probe.yml
.github/workflows/: ci.yml
aletheia/: __init__.py  baselines.py  calibration.py  cli.py  config.py  llm.py  manifests.py  models.py  reporter.py  runner.py  scorer.py  security.py  validation.py
aletheia/dimensions/: __init__.py  apriori.py  care.py  embodied.py  falling.py  finitude.py  horizon.py  thrownness.py  unconcealment.py
aletheia/nervous/: graph.py  signals.py  transport.py
benchmarks/baselines/: README.md
benchmarks/calibration/: README.md  annotation-guide.md
benchmarks/probes/: README.md
benchmarks/validation/: README.md  registry.yaml
configs/: default.yaml  minimal.yaml  paranoid.yaml
configs/guardrail_rules/: default_rules.yaml
docs/: FUTURE-WORK-SPEC.md  PHASE-2-IMPLEMENTATION-PLAN.md  RELEASES.md  VERSIONING.md  providers.md
docs/benchmark-cards/: README.md  quick.md  standard.md
docs/contributors/: README.md  benchmark-quality-bar.md  dimension-guide.md  probe-manifest-migration.md  probe-template.yaml  rubric-template.md  suite-manifests.md  suite-template.yaml
docs/methodology/: benchmark-release-v0.2.md  reproducibility.md  validation-study-v0.3.md
examples/providers/: README.md  anthropic.env.example  ollama.env.example  openai.env.example  run-anthropic.sh  run-comparison.sh  run-ollama.sh  run-openai.sh  run-xai.sh  xai.env.example
openclaw_skills/: __init__.py  __main__.py  cli.py  config.py  convergence.py  logging.py  models.py  pipeline.py  registry.py  security.py  server.py
openclaw_skills/skills/: __init__.py  base.py
results/: llama3.2-3b-report.json  phi3-3.8b-report.json  qwen3-14b-report.json  qwen3-8b-report.json
skill/: SKILL.md
suites/: manifest-smoke-local.yaml  manifest-smoke.yaml  quick.yaml  standard.yaml
tests/: __init__.py  conftest.py  test_baselines.py  test_calibration.py  test_cli.py  test_config.py  test_contributor_assets.py  test_convergence.py  test_dimensions.py  test_llm.py  test_manifests.py  test_models.py  test_nervous_system.py  test_pipeline.py  test_registry.py  test_reporter.py  test_runner.py  test_scorer.py  test_security.py  test_validation.py
tests/skills/: __init__.py
(+48 files in other folders)
